Ensure overflow scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 @import 'tailwindcss';
 
+html,
+body {
+  height: 100%;
+  overflow: auto;
+}
+
 body {
   font-family: sans-serif;
   margin: 0;
-  height: 100%;
-  overflow: auto;
 }
